# Proyecto_Integracion

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci-application.yml
application/: codigo_muestra.py  main.py
tests/: test_base.py  test_codigo_muestra.py
